--- a/Project/AdminLTE-master/pages/forms/general.html
+++ b/Project/AdminLTE-master/pages/forms/general.html
@@ -1253,7 +1253,7 @@
                   </div>
                   <div class="form-group">
                     <label for="customRange1">Custom range</label>
-                    <input type="range" class="custom-range" id="customRange1">
+                    <input type="range" class="custom-range" id="customRange1">0
                   </div>
                   <div class="form-group">
                     <label for="customRange1">Custom range (custom-range-danger)</label>
